apps/bccmusic-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bccmusic-frontend
  namespace: bccmusic-frontend
spec:
  selector:
    app: bccmusic-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
