apps/bccmusic-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bccmusic-frontend
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bccmusic.boonecountyin.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bccmusic-frontend
            port:
              number: 80
